<resources>
    <string name="app_name">GPA Calculator</string>
    <string name="todo">TODO</string>
    <string name="credits">Credits</string>
    <string name="grade">Grade</string>
    <string name="Class">Class</string>
    <string name="classname">Class</string>
    <string name="Calculate">Calculate</string>
    <string name="titleText">Calculate Your GPA!</string>
    <string name="empty" />
    <string name="courseTitle">Enter Your Course Details Below</string>
    <string name="class_name">Enter Class Name</string>
    <string name="btnAdd">Add Course</string>
    <string name="class_credits">Enter Class Credits</string>
    <string name="class_grade">Enter Class Grade</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_sendGPA">Send Your GPA</string>
    <string name="title_activity_send_s_m_s">Send Your GPA</string>
    <string name="send_gpa">Send GPA</string>
    <string name="clear_data">Clear Data</string>

</resources>