<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">

    <TextView
        android:id="@+id/courseTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:text="@string/courseTitle"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginBottom="225dp"
        android:layout_marginTop="10dp"/>

    <AutoCompleteTextView
        android:id="@+id/classTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:hint="@string/class_name"
        android:text=""
        android:textAlignment="center" />

    <EditText
        android:id="@+id/creditsTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:text=""
        android:hint="@string/class_credits"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/gradeTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/class_grade"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:autofillHints="" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:text="@string/btnAdd" />
</LinearLayout>
